[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Emmanuel Taiwo <100073682+devbird007@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.0"}
loguru = "^0.7.2"
pandas = "^2.2.3"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
